completed orders for merchant and fixed up spacing of show page

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -64,3 +64,11 @@
 .card-deck {
   margin-right: 3rem;
 }
+
+// ===========================
+// SHOW
+// ===========================
+.order-details {
+  margin-left: 15rem;
+  margin-top: 10rem;
+}
